# libmtp

./: configure.ac
Xcode/: gphoto2-endian.h  libmtp.h
Xcode/libmtp.xcodeproj/: project.pbxproj
Xcode/libmtp.xcodeproj/project.xcworkspace/xcshareddata/: libmtp.xccheckout
Xcode/libmtp/libmtp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Xcode/libmtp/libmtp.xcodeproj/project.xcworkspace/xcuserdata/olunx.xcuserdatad/: UserInterfaceState.xcuserstate
Xcode/libmtp/libmtp.xcodeproj/xcuserdata/olunx.xcuserdatad/xcschemes/: libmtp.xcscheme  xcschememanagement.plist
daemon/: Makefile.am  dbus-interface.xml  dbus_service.c  dbus_service.h  mtpd.c  udev_listener.c  udev_listener.h
